# handbook_py

./: .gitignore  README.md  pyproject.toml
base_const_2/less2_3/: less2_3.py
collections3/: less3_1.py  less3_2.py
