[tool.poetry]
name = "handbook-py"
version = "0.1.0"
description = "My description"
authors = ["Alex <sterx0@gmail.com>"]
readme = "README.md"
packages = [{include = "handbook_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
